css changes on home page to 1. hide overflows 2. fix section sizes 3. scroll full page

--- a/src/Components/Home/main.css
+++ b/src/Components/Home/main.css
@@ -1,14 +1,29 @@
+.scrollContainer {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  scroll-behavior: smooth;
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+
+}
+.section {
+  width: 100%;
+  height: 100vh;
+  background-size:  cover;
+  scroll-snap-align: start;
+  overflow: hidden;
+}
+
 .s1 {
   background-color: #010103;
-  height: 100vh;
-
+  
   color: white;
   text-align: center;
 }
 
 .s2 {
   background-color: #00012d;
-  height: 100vh;
   color: #fff;
   text-align: center;
 }
@@ -23,7 +38,6 @@
 
 .s4 {
   background-color: #000037;
-  height: 100vh;
   color: #fff;
   text-align: center;
 }
